--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser": "~10.1.4",
     "@angular/platform-browser-dynamic": "~10.1.4",
     "@angular/router": "~10.1.4",
+    "ngx-papaparse": "^5.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "xliff": "^5.3.1",
