--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "reptimer",
-  "version": "0.1.0",
+  "version": "2.0.0",
   "scripts": {
     "ng": "ng",
     "prebuild": "node tools/version.js",
     "start": "npm run prebuild && ng serve --port 4201",
     "build": "ng build",
+    "deployment": "npm run prebuild && ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -27,6 +28,7 @@
     "@angular/router": "~11.0.5",
     "ngx-papaparse": "^5.0.0",
     "rxjs": "~6.6.0",
+    "ts-md5": "^1.2.7",
     "tslib": "^2.0.0",
     "xliff": "^5.3.1",
     "zone.js": "~0.10.2"
@@ -51,5 +53,8 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.0.2"
+  },
+  "browser": {
+    "crypto": false
   }
 }
