Layout geändert, Datenspeicherung korrigiert

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "prebuild": "node tools/version.js",
     "start": "npm run prebuild && ng serve --port 4201",
+    "deploy": "ng build --prod",
     "build": "ng build",
     "deployment": "npm run prebuild && ng build --prod",
     "test": "ng test",
@@ -26,6 +27,7 @@
     "@angular/platform-browser": "~11.0.5",
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
+    "file-saver": "^2.0.5",
     "ngx-papaparse": "^5.0.0",
     "rxjs": "~6.6.0",
     "ts-md5": "^1.2.7",
