--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,16 +11,23 @@
     "resolveJsonModule": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2020",
+    "target": "ES2022",
     "module": "es2020",
     "lib": [
       "es2018",
       "dom"
     ],
     "paths": {
-      "@environments/*": ["src/environments/*"],
-      "@/*": ["src/app/*"],
-      "@styles/*": ["src/styles/*"]
-    }
+      "@environments/*": [
+        "src/environments/*"
+      ],
+      "@/*": [
+        "src/app/*"
+      ],
+      "@styles/*": [
+        "src/styles/*"
+      ]
+    },
+    "useDefineForClassFields": false
   }
 }
